--- a/src/main/resources/templates/corusel.html
+++ b/src/main/resources/templates/corusel.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Main</title>
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm">
         <p class="h5 my-0 me-md-auto fw-normal"><a href="home">SportNews</a></p>
         <nav class="my-2 my-md-0 me-md-3">
