--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html >
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 
     </header>
 </head>
-<body background="https://www.visoftgmbh.de/wp-content/uploads/bg-referencies.jpg">
+<body cbackground="https://gamerwall.pro/uploads/posts/2021-11/1637071150_52-gamerwall-pro-p-prozrachnaya-tekstura-oboi-na-zastavku-52.jpg">
     <div class="container mt-5 mb-5">
         <h1>Добавление статьи</h1>
         <form action="/add" method="post">
