--- a/src/main/resources/templates/addNews.html
+++ b/src/main/resources/templates/addNews.html
@@ -20,7 +20,7 @@
         <a class="btn btn-outline-primary" href="add">Add </a>
     </header>
 </head>
-<body background="https://www.visoftgmbh.de/wp-content/uploads/bg-referencies.jpg">
+<body background="https://gamerwall.pro/uploads/posts/2021-11/1637071150_52-gamerwall-pro-p-prozrachnaya-tekstura-oboi-na-zastavku-52.jpg">
 <h1>Все новости</h1>
 <div class="row g-0">
     <div class="col-sm-6 col-md-8">
