--- a/src/main/resources/templates/basketball.html
+++ b/src/main/resources/templates/basketball.html
@@ -1,6 +1,12 @@
 <!doctype html>
-<html lang="en">
 
+<html lang="en" >
+<style>
+   .b {
+
+       background-image: url("https://gamerwall.pro/uploads/posts/2021-11/1637071150_52-gamerwall-pro-p-prozrachnaya-tekstura-oboi-na-zastavku-52.jpg");
+   }
+</style>
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
@@ -21,9 +27,9 @@
         <a class="btn btn-outline-primary" href="addNews">Add News</a>
     </header>
 </head>
-<body background="https://www.visoftgmbh.de/wp-content/uploads/bg-referencies.jpg">
+<body  class="b"  >
 
-<div class="container">
+<div class="container" >
 
     <div class="row">
         <div class="col-8">
