--- a/src/main/resources/templates/hockey.html
+++ b/src/main/resources/templates/hockey.html
@@ -17,7 +17,7 @@
         <a class="btn btn-outline-primary" href="addNews">Add News</a>
     </header>
 </head>
-<body background="https://www.visoftgmbh.de/wp-content/uploads/bg-referencies.jpg">
+<body background="https://gamerwall.pro/uploads/posts/2021-11/1637071150_52-gamerwall-pro-p-prozrachnaya-tekstura-oboi-na-zastavku-52.jpg">
 
 
 <div class="container">
