--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
         <a class="btn btn-outline-primary" href="addNews">Add News</a>
     </header>
 </head>
-<body background="https://www.visoftgmbh.de/wp-content/uploads/bg-referencies.jpg">
+<body background="https://gamerwall.pro/uploads/posts/2021-11/1637071150_52-gamerwall-pro-p-prozrachnaya-tekstura-oboi-na-zastavku-52.jpg">
 <section >
     </div>
     <div class="row row-cols-4">
@@ -34,7 +34,7 @@
             <div class="card-body">
                 <h5 class="card-title">Football</h5>
                 <p class="card-text">Ronaldinho</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Роналдиньо" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
         <div class="col"><div class="card" style="width: 18rem;">
@@ -42,7 +42,7 @@
             <div class="card-body">
                 <h5 class="card-title">Hockey</h5>
                 <p class="card-text">Alexander Ovechkin </p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Овечкин,_Александр_Михайлович" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
         <div class="col"><div class="card" style="width: 18rem;">
@@ -50,7 +50,7 @@
             <div class="card-body">
                 <h5 class="card-title">Basketball</h5>
                 <p class="card-text">Michael Jordan</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Джордан,_Майкл" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
         <div class="col"><div class="card" style="width: 18rem;">
@@ -58,7 +58,7 @@
             <div class="card-body">
                 <h5 class="card-title">Biathlon</h5>
                 <p class="card-text">Dorothea Wierer</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Вирер,_Доротея" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
 </section>
@@ -71,7 +71,7 @@
             <div class="card-body">
                 <h5 class="card-title">Formula 1</h5>
                 <p class="card-text">Michael Schumacher</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Шумахер,_Михаэль" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
         <div class="col"><div class="card" style="width: 18rem;">
@@ -79,7 +79,7 @@
             <div class="card-body">
                 <h5 class="card-title">Boxing</h5>
                 <p class="card-text">Mike Tyson</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Тайсон,_Майк" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
         <div class="col"><div class="card" style="width: 18rem;">
@@ -87,7 +87,7 @@
             <div class="card-body">
                 <h5 class="card-title">Volleyball</h5>
                 <p class="card-text">Lyubov Shashkova</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://en.wikipedia.org/wiki/Lyubov_Sokolova_(volleyball)" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
         <div class="col"><div class="card" style="width: 18rem;">
@@ -95,7 +95,7 @@
             <div class="card-body">
                 <h5 class="card-title">Tennis</h5>
                 <p class="card-text">Serena Williams</p>
-                <a href="#" class="btn btn-primary">Read more</a>
+                <a href="https://ru.wikipedia.org/wiki/Уильямс,_Серена" class="btn btn-primary">Read more</a>
             </div>
         </div></div>
 </section>
