--- a/src/main/resources/templates/football.html
+++ b/src/main/resources/templates/football.html
@@ -20,7 +20,7 @@
 </head>
 
 </head>
-<body background="https://www.visoftgmbh.de/wp-content/uploads/bg-referencies.jpg">
+<body background="https://gamerwall.pro/uploads/posts/2021-11/1637071150_52-gamerwall-pro-p-prozrachnaya-tekstura-oboi-na-zastavku-52.jpg">
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
